testdata/golden/hir_borrow/invalid/spawn_escape.hir
error SEM3021 testdata/golden/hir_borrow/invalid/spawn_escape.sg:6:30 cannot send 'r' to a spawned task

== HIR ==
module 

async fn use_ref(x: &int [&]) -> nothing (id=1, sym=566) {
}

borrow edges:
  <none>
events:
  <none>
move plan:
  L1133(x): MoveCopy (copy type)

async fn t() -> nothing (id=2, sym=567) {
  let mut x: int [copy] = 1
  let r: &int [&] = (& x): &int
  let task: type#317 = spawn use_ref(r): type#317: type#317
  return task.await(): nothing
}

borrow edges:
  L1135(r) (&) borrows L1134(x) at 0:87-89 scope=S5
events:
  borrow_start L1135(r) -> L1134(x) (&) at 0:87-89 scope=S5 note="B1"
  spawn_escape L1135(r) -> L1134(x) at 0:120-121 scope=S5 note="B1"
  borrow_end L1135(r) -> L1134(x) scope=S5 note="scope_end B1"
move plan:
  L1134(x): MoveCopy (copy type)
  L1135(r): MoveForbidden (spawn escape)
  L1136(task): MoveNeedsDrop (non-copy (drop))

